--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
   "AppSettings": {
     "SecretKey": "MYSECRETSUPERSECRET",
     "Expiration": 2,
-    "Issuer": "SampleApp",
+    "Issuer": "BoaSaudeAutenticacao",
     "Audience": "https://localhost"
   }
 
